--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -24,6 +24,6 @@
     </style>
   </head>
   <body>
-    <h1>JavaScript Fundamentals – Part 1</h1>
+    <h1>JavaScript Fundamentals – Part One</h1>
   </body>
 </html>
