--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JavaScript Fundamentals – Part 1</title>
+    <title>JavaScript Fundamentals – Part 1 (Forked!)</title>
     <style>
       body {
         height: 100vh;
         display: flex;
         align-items: center;
-        background: linear-gradient(to top left, #28b487, #7dd56f);
+        background: linear-gradient(to right, turquoise, teal);
       }
       h1 {
         font-family: sans-serif;
@@ -24,6 +24,6 @@
     </style>
   </head>
   <body>
-    <h1>JavaScript Fundamentals – Part 1</h1>
+    <h1>JavaScript Fundamentals – Part 1 (Forked!)</h1>
   </body>
 </html>
